[ADD] missing files for exp.sh